--- a/bower.json
+++ b/bower.json
@@ -12,7 +12,6 @@
     "bootstrap": "^3.3.6",
     "lodash": "^4.12.0",
     "ngmap": "^1.17.3",
-    "angular-scroll": "^1.0.0",
-    "76d-social-icons": "^1.0.4"
+    "angular-scroll": "^1.0.0"
   }
 }
