Removed inline styles

--- a/bower.json
+++ b/bower.json
@@ -12,6 +12,9 @@
     "bootstrap": "^3.3.6",
     "lodash": "^4.12.0",
     "ngmap": "^1.17.3",
-    "angular-scroll": "^1.0.0"
+    "angular-scroll": "^1.0.0",
+    "angular-ui-router": "^0.3.0",
+    "angular-bootstrap-lightbox": "^0.12.0",
+    "animate.css": "^3.5.1"
   }
 }
