--- a/package.json
+++ b/package.json
@@ -7,15 +7,16 @@
   "license": "MIT",
   "devDependencies": {
     "bower": "^1.3.1",
-    "bower-files": "^3.13.1",
+    "bower-files": "^3.14.1",
     "connect-livereload": "^0.5.3",
-    "gulp": "^3.5.6",
-    "gulp-concat": "^2.2.0",
+    "gulp": "^3.9.1",
+    "gulp-concat": "^2.6.1",
     "gulp-connect": "^2.2.0",
     "gulp-ext-replace": "^0.2.0",
     "gulp-inject": "^1.5.0",
     "gulp-livereload": "^3.8.0",
     "gulp-rename": "^1.2.0",
+    "gulp-sass": "^4.0.1",
     "gulp-shell": "~0.3.0",
     "gulp-ssh": "^0.5.6",
     "gulp-uglify": "^1.2.0",
@@ -27,7 +28,7 @@
     "karma-jasmine": "^0.3.5",
     "karma-junit-reporter": "^0.2.2",
     "protractor": "^2.1.0",
-    "require-dir": "^0.3.0",
+    "require-dir": "^0.3.2",
     "run-sequence": "^1.1.0",
     "shelljs": "^0.2.6"
   },
